# bug-reproduction-validation-multi-zome

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/posts/workdir/: dna.yaml
dnas/posts/zomes/coordinator/invalid/: Cargo.toml
dnas/posts/zomes/coordinator/invalid/src/: lib.rs
dnas/posts/zomes/coordinator/valid/: Cargo.toml
dnas/posts/zomes/coordinator/valid/src/: lib.rs  post.rs
dnas/posts/zomes/coordinator/valid/tests/: delete_test.rs
dnas/posts/zomes/integrity/invalid/: Cargo.toml
dnas/posts/zomes/integrity/invalid/src/: lib.rs
dnas/posts/zomes/integrity/valid/: Cargo.toml
dnas/posts/zomes/integrity/valid/src/: lib.rs  post.rs
tests/: package.json
tests/src/posts/valid/: common.ts  post.test.ts
ui/src/: App.vue
ui/src/posts/invalid/: types.ts
ui/src/posts/valid/: types.ts
ui/src/posts/valid_always/: CreatePost.vue  EditPost.vue  PostDetail.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
