[package]
name = "valid"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "valid"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

valid_integrity = { workspace = true } 


[dev-dependencies]
holochain = { version = "0.2.2", default-features=false, features=["test_utils"]}
tokio = "1.32.0"